# hydrone_gazebo

./: README.md
hydrone_control/: CMakeLists.txt  package.xml
hydrone_control/config/: hydrone_control.yaml
hydrone_control/launch/: hydrone_control.launch
hydrone_description/: CMakeLists.txt  package.xml
hydrone_description/urdf/: hydrone.gazebo  hydrone.xacro
hydrone_description/urdf/meshes/: aerial_propeller.dae  aerial_propeller_1.dae  aquatic_propeller.dae  aquatic_propeller_1.dae
hydrone_gazebo/: CMakeLists.txt  package.xml
hydrone_gazebo/launch/: hydrone_world.launch
